# sub-midair-input

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: architecture.md  fold_input_demo.md  japanese_input.md  todo.md  todo_next.md
docs/emoji_search/: DOCKER.md  experiment-domain-matched-index.md
scripts/: manuscript.md  run-web.sh
